Fixed deprecated method usage detected by compiler
Class.newInstance() is deprecated in favor of
Class.getConstructor().newInstance()